--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <p class="project-details">
                             Exodus Travels is Travel Agency in Germany.
                         </p>
-                        <a href="https://www.trafalgar.com/en-sg" target="_blank" class="project-link">Check it Out</a>
+                        <a href="https://www.exodustravels.com/" target="_blank" class="project-link">Check it Out</a>
                     </div>
                     &ensp;
                     &ensp;
